force-app/main/default/objects/FSM_SAIcons__mdt/FSM_SAIcons__mdt.object-meta.xml
<CustomObject>
    <description>Icon URL to display on map view</description>
    <label>SA Icons</label>
    <pluralLabel>SA Icons</pluralLabel>
</CustomObject>