force-app/main/default/objects/FSM_SAIcons__mdt/fields/FSM_GanttLabel__c.field-meta.xml
<CustomField>
    <fullName>FSM_GanttLabel__c</fullName>
    <description>SFS-6663 This text will be updated as the Gantt label on service appointments where specified.</description>
    <label>Gannt Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>