force-app/main/default/objects/FSM_SAIcons__mdt/fields/FSM_Link__c.field-meta.xml
<CustomField>
    <fullName>FSM_Link__c</fullName>
    <label>Link</label>
    <type>Url</type>
</CustomField>