force-app/main/default/objects/FSM_SAIcons__mdt/fields/FSM_Name__c.field-meta.xml
<CustomField>
    <fullName>FSM_Name__c</fullName>
    <label>Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>